# vala

./: .gitignore  Makefile.am  README.md  autogen.sh  config.h.meson  configure.ac  libvala.pc.in  meson.build  meson_options.txt  vala.hsproj  vala.props  vala.sln  valac.hsproj
codegen/: Makefile.am  meson.build  valaccodebasemodule.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  valagasyncmodule.vala  valagdbusclientmodule.vala  valagdbusservermodule.vala  valagtypemodule.vala  valagvariantmodule.vala
compiler/: Makefile.am  meson.build  valacompiler.vala
doc/: meson.build
gee/: meson.build
tests/: Makefile.am  meson.build
tests/annotations/: deprecated-delegate-minimal.c-expected  deprecated-enum-minimal.c-expected  deprecated-method-minimal.c-expected  deprecated-property-minimal.c-expected  deprecated-struct-minimal.c-expected  deprecated.c-expected  description.c-expected
tests/arrays/: cast-struct-boxed-element-access.c-expected  class-field-fixed-length-initializer.c-expected  class-field-initializer.c-expected  class-field-length-cname.c-expected  constant-element-access.c-expected  element-class-assignment.c-expected  element-nullable-assignment.c-expected  empty-length-0.c-expected  field-global-length-cname.c-expected  fixed-length-enum-value.c-expected  fixed-length-init0-not-allowed.c-expected  in-operator-with-boxed-needle.c-expected  inline-namespace-field.c-expected  inline-struct.c-expected  length-inline-assignment.c-expected  length-type-include.c-expected  length-type.c-expected  resize-local-size-captured.c-expected  resize-local-size.c-expected  resize.c-expected  slice-fixed-length.c-expected  struct-field-initializer.c-expected  struct-field-length-cname.c-expected  struct-initializer-null.c-expected  struct-namespaced-initializer.c-expected
tests/asynchronous/: bug595735.c-expected  bug595755.c-expected  bug596177.c-expected  bug596861.c-expected  bug597294.c-expected  bug598677.c-expected  bug598697.c-expected  bug598698.c-expected  bug599568.c-expected  bug600827.c-expected  bug601558.c-expected  bug602594.c-expected  bug612641.c-expected  bug613484.c-expected  bug614294.c-expected  bug620740.c-expected  bug626053.c-expected  bug639591.c-expected  bug640721.c-expected  bug641182.c-expected  bug646945.c-expected  bug652252.c-expected  bug653861.c-expected  bug654336.c-expected  bug654337.c-expected  bug659886.c-expected  bug661961.c-expected  bug710103.c-expected  bug741929.c-expected  bug742621.c-expected  bug762819.c-expected  bug777242.c-expected  bug783543.c-expected  bug792660.c-expected  bug792942.c-expected  bug793158.c-expected  captured-fixed-array.c-expected  catch-error-scope.c-expected  catch-in-finally.c-expected  closures.c-expected  (+13 more)
tests/basic-types/: array-uint8-uchar-compat.c-expected  arrays-fixed-assignment.c-expected  arrays-generics.c-expected  arrays.c-expected  boolean-literal.c-expected  boolean.c-expected  bug571486.c-expected  bug591552.c-expected  bug595751.c-expected  bug596637.c-expected  bug596785.c-expected  bug604371.c-expected  bug610660.c-expected  bug622178.c-expected  bug632322.c-expected  bug643612.c-expected  bug644046.c-expected  bug647222.c-expected  bug648364.c-expected  bug650993.c-expected  bug652380.c-expected  bug655908.c-expected  bug659975.c-expected  bug678791.c-expected  bug686336.c-expected  bug729907.c-expected  bug731017.c-expected  bug756376.c-expected  bug761307.c-expected  bug761736.c-expected  bug772426.c-expected  bug787152.c-expected  bug788775.c-expected  custom-types.c-expected  default-gtype.c-expected  escape-chars.c-expected  float-literals.c-expected  floats-boxed-cast.c-expected  floats-hexadecimal.c-expected  floats.c-expected  (+20 more)
tests/chainup/: bug791785.c-expected  class-base-foo.c-expected  class-base.c-expected  class-compact-base.c-expected  class-compact-this.c-expected  class-object.c-expected  class-this-foo.c-expected  class-this.c-expected  method-lambda-base.c-expected  no-chainup.c-expected  signal-default-handler.c-expected  struct-base-foo.c-expected  struct-base.c-expected  struct-no-gtype-base.c-expected  struct-simple-no-gtype-base.c-expected  struct-this-foo.c-expected  struct-this.c-expected
tests/constants/: delegate-type.c-expected  glog.c-expected  member-access-enum.c-expected  member-access.c-expected  strings.c-expected
tests/constness/: bytes-get-data.vala  tests-extra-environment.sh
tests/control-flow/: assigned-local-variable.c-expected  break.c-expected  bug628336.c-expected  bug639482.c-expected  bug652549.c-expected  bug661985.c-expected  bug665904.c-expected  bug691514.c-expected  bug736774-1.c-expected  bug736774-2.c-expected  bug761267-1.c-expected  bug761267-2.c-expected  bug764440.c-expected  coalesce-as-argument.c-expected  coalesce-execution-order.c-expected  coalesce-reference-transfer.c-expected  coalesce-right-value.c-expected  coalesce-short-circuit.c-expected  conditional-as-argument.c-expected  expressions-conditional.c-expected  finally-no-return.c-expected  for-switch-continue.c-expected  for.c-expected  foreach.c-expected  local-clash-with-implicit-this.c-expected  lock-if-throw.c-expected  nested-conditional.c-expected  null-conditional-bool.c-expected  pre-post-increment-array-index.c-expected  pre-post-increment-field.c-expected  pre-post-increment-local.c-expected  pre-post-increment-parameter.c-expected  pre-post-increment-property.c-expected  pre-post-increment.c-expected  sideeffects.c-expected  switch-enum.c-expected  switch-string.c-expected  switch.c-expected  while-false.c-expected
tests/dbus/: arrays_client.c-expected  arrays_server.c-expected  async-bus_client.c-expected  async-bus_server.c-expected  async-connection_client.c-expected  async-connection_server.c-expected  async-errors_client.c-expected  async-errors_server.c-expected  async-no-reply-relay.test  async-no-reply-relay_client.c-expected  async-no-reply-relay_server.c-expected  async-no-reply-request.test  async-no-reply-request_client.c-expected  async-no-reply.test  (+47 more)
valadoc/: meson.build
vapigen/: Makefile.am  meson.build
(+606 files in other folders)
