test_cases = [
	'basic-types/integers.vala',
	'basic-types/integers-boxed-cast.vala',
	'basic-types/escape-chars.vala',
	'basic-types/floats.vala',
	'basic-types/floats-boxed-cast.vala',
	'basic-types/boolean.vala',
	'basic-types/custom-types.vala',
	'basic-types/default-gtype.vala',
	'basic-types/strings.vala',
	'basic-types/arrays.vala',
	'basic-types/arrays-generics.vala',
	'basic-types/arrays-fixed-assignment.vala',
	'basic-types/array-uint8-uchar-compat.vala',
	'basic-types/pointers.vala',
	'basic-types/pointers-arithmetic.vala',
	'basic-types/sizeof.vala',
	'basic-types/garray.vala',
	'basic-types/glists.vala',
	'basic-types/gptrarray.vala',
	'basic-types/gvariants.vala',
	'basic-types/gvariants-unboxing-safe.vala',
	'basic-types/null.vala',
	'basic-types/bug571486.vala',
	'basic-types/bug591552.vala',
	'basic-types/bug595751.vala',
	'basic-types/bug596637.vala',
	'basic-types/bug596785.vala',
	'basic-types/bug604371.vala',
	'basic-types/bug610660.vala',
	'basic-types/bug622178.vala',
	'basic-types/bug632322.vala',
	'basic-types/bug643612.vala',
	'basic-types/bug644046.vala',
	'basic-types/bug647222.vala',
	'basic-types/bug648364.vala',
	'basic-types/bug650993.vala',
	'basic-types/bug652380.vala',
	'basic-types/bug655908.vala',
	'basic-types/bug659975.vala',
	'basic-types/bug678791.vala',
	'basic-types/bug686336.vala',
	'basic-types/bug729907.vala',
	'basic-types/bug731017.vala',
	'basic-types/bug756376.vala',
	'basic-types/bug761307.vala',
	'basic-types/bug761736.vala',
	'basic-types/bug772426.vala',
	'basic-types/bug787152.vala',
	'basic-types/bug788775.vala',
	'constants/glog.vala',
	'namespace/unique.vala',
	'arrays/class-field-length-cname.vala',
	'arrays/constant-element-access.vala',
	'arrays/empty-length-0.vala',
	'arrays/fixed-length-init0-not-allowed.vala',
	'arrays/field-global-length-cname.vala',
	'arrays/fixed-length-enum-value.vala',
	'arrays/inline-struct.vala',
	'arrays/in-operator-with-boxed-needle.vala',
	'arrays/length-inline-assignment.vala',
	'arrays/length-type-include.vala',
	'arrays/struct-field-length-cname.vala',
	'arrays/struct-field-initializer.vala',
	'arrays/struct-namespaced-initializer.vala',
	'arrays/resize.vala',
	'arrays/resize-local-size.vala',
	'arrays/resize-local-size-captured.vala',
	'chainup/class-base.vala',
	'chainup/class-base-foo.vala',
	'chainup/class-compact-base.vala',
	'chainup/class-object.vala',
	'chainup/class-this.vala',
	'chainup/class-this-foo.vala',
	'chainup/method-lambda-base.vala',
	'chainup/no-chainup.vala',
	'chainup/signal-default-handler.vala',
	'chainup/struct-base.vala',
	'chainup/struct-base-foo.vala',
	'chainup/struct-no-gtype-base.vala',
	'chainup/struct-simple-no-gtype-base.vala',
	'chainup/struct-this.vala',
	'chainup/struct-this-foo.vala',
	'chainup/bug791785.vala',
	'pointers/bug590641.vala',
	'methods/array-length-type.vala',
	'methods/lambda.vala',
	'methods/closures.vala',
	'methods/contains.vala',
	'methods/extern.vala',
	'methods/iterator.vala',
	'methods/parameter-fixed-array-initializer.vala',
	'methods/parameter-ref-array-resize.vala',
	'methods/parameter-ref-array-resize-captured.vala',
	'methods/prepostconditions.vala',
	'methods/prepostconditions-captured.vala',
	'methods/postconditions.vala',
	'methods/same-name.vala',
	'methods/symbolresolution.vala',
	'methods/bug540483.vala',
	'methods/bug595538.vala',
	'methods/bug596726.vala',
	'methods/bug597426.vala',
	'methods/bug598738.vala',
	'methods/bug599892.vala',
	'methods/bug613483.vala',
	'methods/bug620673.vala',
	'methods/bug622570.vala',
	'methods/bug626783.vala',
	'methods/bug634753.vala',
	'methods/bug639054.vala',
	'methods/bug642350.vala',
	'methods/bug642885.vala',
	'methods/bug642899.vala',
	'methods/bug646345.vala',
	'methods/bug648320.vala',
	'methods/bug649562.vala',
	'methods/bug652098.vala',
	'methods/bug653391.vala',
	'methods/bug653908.vala',
	'methods/bug663210.vala',
	'methods/bug699956.vala',
	'methods/bug710862.vala',
	'methods/bug723009.vala',
	'methods/bug723195.vala',
	'methods/bug726347.vala',
	'methods/bug736235.vala',
	'methods/bug737222.vala',
	'methods/bug743877.vala',
	'methods/bug771964.vala',
	'methods/bug774060.vala',
	'methods/bug781061.vala',
	'methods/bug784691.vala',
	'methods/bug791215.vala',
	'methods/bug791283.vala',
	'methods/argument-array-initilizer.vala',
	'methods/argument-named.vala',
	'methods/delegate-target.vala',
	'methods/generics.vala',
	'methods/params-array.vala',
	'methods/print-attribute.vala',
	'methods/printf-constructor.vala',
	'methods/varargs-delegate.vala',
	'methods/varargs-delegate-without-target.vala',
	'methods/varargs-gvalue.vala',
	'methods/varargs-out.vala',
	'methods/varargs-ref.vala',
	'methods/varargs-struct.vala',
	'control-flow/assigned-local-variable.vala',
	'control-flow/break.vala',
	'control-flow/coalesce-as-argument.vala',
	'control-flow/coalesce-execution-order.vala',
	'control-flow/coalesce-reference-transfer.vala',
	'control-flow/coalesce-right-value.vala',
	'control-flow/coalesce-short-circuit.vala',
	'control-flow/conditional-as-argument.vala',
	'control-flow/expressions-conditional.vala',
	'control-flow/for.vala',
	'control-flow/for-switch-continue.vala',
	'control-flow/foreach.vala',
	'control-flow/local-clash-with-implicit-this.vala',
	'control-flow/nested-conditional.vala',
	'control-flow/pre-post-increment.vala',
	'control-flow/pre-post-increment-field.vala',
	'control-flow/pre-post-increment-local.vala',
	'control-flow/pre-post-increment-parameter.vala',
	'control-flow/pre-post-increment-property.vala',
	'control-flow/switch.vala',
	'control-flow/switch-enum.vala',
	'control-flow/sideeffects.vala',
	'control-flow/while-false.vala',
	'control-flow/bug628336.vala',
	'control-flow/bug639482.vala',
	'control-flow/bug652549.vala',
	'control-flow/bug661985.vala',
	'control-flow/bug665904.vala',
	'control-flow/bug691514.vala',
	'control-flow/bug736774-1.vala',
	'control-flow/bug736774-2.vala',
	'control-flow/bug764440.vala',
	'enums/default-gtype.vala',
	'enums/enum_only.vala',
	'enums/enum-no-gtype.vala',
	'enums/enums.vala',
	'enums/flags.vala',
	'enums/from-0-literal.vala',
	'enums/no_gtype_to_string.vala',
	'enums/switch.vala',
	'enums/bug666035.vala',
	'enums/bug673879.vala',
	'enums/bug763831.vala',
	'enums/bug780050.vala',
	'structs/struct_only.vala',
	'structs/struct-base-types.vala',
	'structs/struct-boxed-cast.vala',
	'structs/struct-initializer-list-in-array.vala',
	'structs/struct-initializer-list-nested.vala',
	'structs/struct-no-gtype.vala',
	'structs/struct-no-gtype-inherit.vala',
	'structs/struct-static-field-initializer.vala',
	'structs/structs.vala',
	'structs/default-gtype.vala',
	'structs/gmutex.vala',
	'structs/gvalue.vala',
	'structs/gvalue-implicit-comparison.vala',
	'structs/bug530605.vala',
	'structs/bug572091.vala',
	'structs/bug583603.vala',
	'structs/bug595587.vala',
	'structs/bug596144.vala',
	'structs/bug603056.vala',
	'structs/bug606202.vala',
	'structs/bug609642.vala',
	'structs/bug613513.vala',
	'structs/bug613825.vala',
	'structs/bug621176.vala',
	'structs/bug622422.vala',
	'structs/bug623092.vala',
	'structs/bug651441.vala',
	'structs/bug654646.vala',
	'structs/bug654753.vala',
	'structs/bug656693.vala',
	'structs/bug657378.vala',
	'structs/bug658048.vala',
	'structs/bug660426.vala',
	'structs/bug661945.vala',
	'structs/bug667890.vala',
	'structs/bug669580.vala',
	'structs/bug685177.vala',
	'structs/bug686190.vala',
	'structs/bug688732.vala',
	'structs/bug690380.vala',
	'structs/bug694140.vala',
	'structs/bug749952.vala',
	'structs/bug775761.vala',
	'structs/bug777194.vala',
	'structs/bug777194-2.vala',
	'delegates/casting.vala',
	'delegates/compatible.vala',
	'delegates/delegate_only.vala',
	'delegates/delegates.vala',
	'delegates/error-pos.vala',
	'delegates/fields.vala',
	'delegates/fields-no-target.vala',
	'delegates/gclosure-conversion.vala',
	'delegates/lambda-mixed-instance-static.vala',
	'delegates/lambda-shared-closure.vala',
	'delegates/member-target-destroy.vala',
	'delegates/reference_transfer.vala',
	'delegates/return-array-null-terminated.vala',
	'delegates/wrapper.vala',
	'delegates/bug539166.vala',
	'delegates/bug595610.vala',
	'delegates/bug595639.vala',
	'delegates/bug638415.vala',
	'delegates/bug639751.vala',
	'delegates/bug659778.vala',
	'delegates/bug683925.vala',
	'delegates/bug703804.vala',
	'delegates/bug761360.vala',
	'delegates/bug792077.vala',
	'objects/chainup.vala',
	'objects/class-ccode-cprefix.vala',
	'objects/class_only.vala',
	'objects/class-destroysinstance.vala',
	'objects/class-inner-types.vala',
	'objects/class-new-no-override.vala',
	'objects/class-vfunc-base-access.vala',
	'objects/classes.vala',
	'objects/classes-interfaces.vala',
	'objects/classes-interfaces-virtuals.vala',
	'objects/classes-implicit-implementation.vala',
	'objects/compact-class.vala',
	'objects/compact-class-destructor.vala',
	'objects/compact-class-refcount.vala',
	'objects/compact-class-custom-ref.vala',
	'objects/constructors.vala',
	'objects/destructors.vala',
	'objects/dynamic.vala',
	'objects/generics.vala',
	'objects/initially-unowned.vala',
	'objects/fields.vala',
	'objects/gobject-class-lifetime.vala',
	'objects/gsource.vala',
	'objects/gtype-class-lifetime.vala',
	'objects/instance-comparison.vala',
	'objects/interface_only.vala',
	'objects/interface-async-base-access.vala',
	'objects/interface-base-access.vala',
	'objects/interface-inner-types.vala',
	'objects/interfaces.vala',
	'objects/interface-abstract-async-override.vala',
	'objects/interface-generics.vala',
	'objects/interface-property-base-access.vala',
	'objects/interface-property-base-impl.vala',
	'objects/interface-property-delegate.vala',
	'objects/interface-property-override.vala',
	'objects/interface-virtual-override.vala',
	'objects/member-initializer-base-properties.vala',
	'objects/member-initializer-property.vala',
	'objects/member-initializer-property-owned-setter.vala',
	'objects/methods.vala',
	'objects/paramspec.vala',
	'objects/plugin-module-init.vala',
	'objects/properties.vala',
	'objects/property-array.vala',
	'objects/property-array-length.vala',
	'objects/property-base-access.vala',
	'objects/property-enum.vala',
	'objects/property-notify.vala',
	'objects/property-ownership.vala',
	'objects/property-read-only-auto.vala',
	'objects/property-delegate.vala',
	'objects/property-delegate-owned.vala',
	'objects/property-gboxed-nullable.vala',
	'objects/property-simple-type-struct-nullable.vala',
	'objects/property-static.vala',
	'objects/property-struct-no-gtype.vala',
	'objects/regex.vala',
	'objects/signals.vala',
	'objects/signals-default-class-handler.vala',
	'objects/signals-enum-marshal.vala',
	'objects/signals-delegate.vala',
	'objects/signals-delegate-parameter.vala',
	'objects/signals-error-marshal.vala',
	'objects/signals-fundamental-return.vala',
	'objects/signals-gobject-return.vala',
	'objects/signals-lambda-delegate.vala',
	'objects/signals-prototype-access.vala',
	'objects/signals-struct-return.vala',
	'objects/singleton.vala',
	'objects/test-025.vala',
	'objects/test-026.vala',
	'objects/test-029.vala',
	'objects/test-034.vala',
	'objects/bug566909.vala',
	'objects/bug588203.vala',
	'objects/bug589928.vala',
	'objects/bug593137.vala',
	'objects/bug593260.vala',
	'objects/bug596621.vala',
	'objects/bug597155.vala',
	'objects/bug597161.vala',
	'objects/bug613486.vala',
	'objects/bug613840.vala',
	'objects/bug620675.vala',
	'objects/bug620706.vala',
	'objects/bug624594.vala',
	'objects/bug626038.vala',
	'objects/bug628639.vala',
	'objects/bug629593.vala',
	'objects/bug631267.vala',
	'objects/bug634782.vala',
	'objects/bug641828.vala',
	'objects/bug642809.vala',
	'objects/bug643711.vala',
	'objects/bug644938.vala',
	'objects/bug646362.vala',
	'objects/bug646792.vala',
	'objects/bug647018.vala',
	'objects/bug653138.vala',
	'objects/bug654702.vala',
	'objects/bug663134.vala',
	'objects/bug664529.vala',
	'objects/bug667668.vala',
	'objects/bug681356.vala',
	'objects/bug683646.vala',
	'objects/bug695671.vala',
	'objects/bug702736.vala',
	'objects/bug702846.vala',
	'objects/bug731547.vala',
	'objects/bug741465.vala',
	'objects/bug751338.vala',
	'objects/bug758816.vala',
	'objects/bug764481.vala',
	'objects/bug766739.vala',
	'objects/bug778632.vala',
	'objects/bug779219.vala',
	'objects/bug779955.vala',
	'objects/bug783897.vala',
	'objects/bug788964.vala',
	'objects/bug795521.vala',
	'objects/with-expression.vala',
	'objects/with-instance.vala',
	'objects/with-nested.vala',
	'objects/with-nested-in-lambda.vala',
	'objects/with-nested-method.vala',
	'objects/with-nested-signal.vala',
	'objects/with-nested-unambigous-signal.vala',
	'errors/catch-error-code.vala',
	'errors/catch-in-finally.vala',
	'errors/default-gtype.vala',
	'errors/errors.vala',
	'errors/errorcode.vala',
	'errors/errordomain.vala',
	'errors/errordomain-static-method.vala',
	'errors/loops.vala',
	'errors/method-throws.vala',
	'errors/bug567181.vala',
	'errors/bug579101.vala',
	'errors/bug596228.vala',
	'errors/bug623049.vala',
	'errors/bug627090.vala',
	'errors/bug639589.vala',
	'errors/bug651145.vala',
	'errors/bug762377.vala',
	'errors/bug778224.vala',
	'asynchronous/bug595735.vala',
	'asynchronous/bug595755.vala',
	'asynchronous/bug596177.vala',
	'asynchronous/bug596861.vala',
	'asynchronous/bug597294.vala',
	'asynchronous/bug598677.vala',
	'asynchronous/bug598697.vala',
	'asynchronous/bug598698.vala',
	'asynchronous/bug599568.vala',
	'asynchronous/bug600827.vala',
	'asynchronous/bug601558.vala',
	'asynchronous/bug612641.vala',
	'asynchronous/bug613484.vala',
	'asynchronous/bug614294.vala',
	'asynchronous/bug620740.vala',
	'asynchronous/bug626053.vala',
	'asynchronous/bug639591.vala',
	'asynchronous/bug640721.vala',
	'asynchronous/bug641182.vala',
	'asynchronous/bug646945.vala',
	'asynchronous/bug652252.vala',
	'asynchronous/bug653861.vala',
	'asynchronous/bug654336.vala',
	'asynchronous/bug654337.vala',
	'asynchronous/bug659886.vala',
	'asynchronous/bug661961.vala',
	'asynchronous/bug710103.vala',
	'asynchronous/bug741929.vala',
	'asynchronous/bug742621.vala',
	'asynchronous/bug762819.vala',
	'asynchronous/bug777242.vala',
	'asynchronous/bug783543.vala',
	'asynchronous/bug792660.vala',
	'asynchronous/bug792942.vala',
	'asynchronous/bug793158.vala',
	'asynchronous/captured-fixed-array.vala',
	'asynchronous/catch-error-scope.vala',
	'asynchronous/catch-in-finally.vala',
	'asynchronous/closures.vala',
	'asynchronous/constructor-argument-check.vala',
	'asynchronous/finish-name.vala',
	'asynchronous/generator.vala',
	'asynchronous/result-pos.vala',
	'asynchronous/yield.vala',
	'generics/constructor-chain-up.vala',
	'generics/floating-type-cast.vala',
	'generics/inference-argument-may-fail.vala',
	'generics/inference-static-function.vala',
	'generics/integer-type-cast.vala',
	'generics/parameter-sizeof-initializer.vala',
	'generics/member-dup-destroy.vala',
	'generics/property-int-cast.vala',
	'generics/string-literal-comparison.vala',
	'generics/type-parameter-properties.vala',
	'generics/bug640330.vala',
	'generics/bug694765-1.vala',
	'generics/bug694765-2.vala',
	'generics/bug694765-3.vala',
	'annotations/deprecated.vala',
	'annotations/description.vala',
	'scanner/regex-escape-x.vala',
	'scanner/string-escape-x.vala',
	'parser/assignment.vala',
	'parser/continue-statement.vala',
	'parser/do-statement.vala',
	'parser/local-variable.vala',
	'parser/lock-statement.vala',
	'parser/main-block.vala',
	'parser/member-access-pointer.vala',
	'parser/namespaces.vala',
	'parser/preprocessor.vala',
	'parser/preprocessor-glib.vala',
	'parser/preprocessor-vala.vala',
	'parser/qualified-member-access.vala',
	'parser/qualified-symbol-access.vala',
	'parser/statement-keyword-as-identifier.vala',
	'parser/switch-statement.vala',
	'parser/template.vala',
	'parser/tuple.vala',
	'parser/using-directive.vala',
	'parser/with-embedded.vala',
	'parser/with-empty.vala',
	'parser/yield-return.vala',
	'parser/bug728574.vala',
	'parser/bug749576.vala',
	'resolver/peek-inner-types.vala',
	'ordering/delegate-class.vala',
	'ordering/delegate-enum.vala',
	'ordering/delegate-interface.vala',
	'ordering/delegate-struct.vala',
	'ordering/struct-delegate.vala',
	'semantic/assignment-same-variable.vala',
	'semantic/floating-reference.vala',
	'semantic/floating-reference-base-method.vala',
	'semantic/floating-reference-error.vala',
	'semantic/member-access-static-with-instance.vala',
	'semantic/member-access-transformed-qualified.vala',
	'semantic/with-buildin.vala',
	'semantic/with-compact.vala',
	'semantic/with-declaration-cast-type.vala',
	'semantic/with-declaration.vala',
	'semantic/with-dereferenced-pointer.vala',
	'semantic/with-enum-member.vala',
	'semantic/with-null.vala',
	'semantic/with-string.vala',
	'semantic/with-value.vala',
]

dbus_test_cases = [
	'dbus/basic-types.test',
	'dbus/arrays.test',
	'dbus/structs.test',
	'dbus/errors.test',
	'dbus/async.test',
	'dbus/async-errors.test',
	'dbus/enum-string-marshalling.vala',
	'dbus/signals.test',
	'dbus/filedescriptor.test',
	'dbus/filedescriptor-errors.test',
	'dbus/dicts.test',
	'dbus/bug596862.vala',
	'dbus/bug602003.test',
	'dbus/bug782719.test',
	'dbus/bug792277.vala',
	'dbus/rawvariants.test',
]

gir_test_cases = [
	'gir/bug651773.test',
	'gir/bug667751.test',
	'gir/bug742012.test',
	'gir/bug788775.test',
	'gir/bug792998.test',
	'gir/array-fixed-length.test',
	'gir/async-result-pos.test',
	'gir/async-sync-out.test',
	'gir/class.test',
	'gir/constant.test',
	'gir/delegate-alias-without-target.test',
	'gir/delegate-array-length-type.test',
	'gir/delegate-closure-destroy-index-conflict.test',
	'gir/delegate-error-pos.test',
	'gir/enum.test',
	'gir/errordomain.test',
	'gir/instance-parameter-owned.test',
	'gir/method-array-length-type.test',
	'gir/parameter-array-length-type.test',
	'gir/parameter-nullable-out-simple-type.test',
	'gir/property-non-readable.test',
	'gir/symbol-type-csuffix.test',
	'gir/union.test',
]

test_cases_non_null = [
	'nullability/bug611223.vala',
]

vala_flags = [
	'--vapidir', join_paths(meson.source_root(), 'vapi'),
	'--pkg', 'gio-2.0',
	'--disable-warnings',
	'--main', 'main', '--save-temps',
	'-X', '-g',
	'-X', '-O0',
	'-X', '-pipe',
	'-X', '-lm',
	'-X', '-DGETTEXT_PACKAGE="valac"',
	'-X', '-Werror=return-type',
	'-X', '-Werror=init-self',
	'-X', '-Werror=implicit',
	'-X', '-Werror=sequence-point',
	'-X', '-Werror=return-type',
	'-X', '-Werror=uninitialized',
	'-X', '-Werror=pointer-arith',
	'-X', '-Werror=int-to-pointer-cast',
	'-X', '-Werror=pointer-to-int-cast',
	'-X', '-Wformat',
	'-X', '-Werror=format-security',
	'-X', '-Werror=format-nonliteral',
	'-X', '-Werror=redundant-decls',
	'-X', '-Werror=int-conversion'
]

vg = find_program('valgrind', required: false)
if (vg.found())
	add_test_setup('valgrind',
		exe_wrapper: [vg, '--error-exitcode=1', '--leak-check=full', '--track-origins=yes '],
		timeout_multiplier: 10,
	)
endif

preparetest = find_program('prepare-test.py')

foreach case : test_cases
	if case.endswith('.vala')
		test(case,
			valac_exe,
			workdir: meson.current_build_dir(),
			args: vala_flags + [join_paths(meson.current_source_dir(), case)],
		)
	else
		invalid_case = run_command(preparetest,
			join_paths(meson.current_source_dir(), case),
			join_paths(meson.current_build_dir(), case.underscorify() + '.vala'),
		)
		test(case,
			valac_exe,
			workdir: meson.current_build_dir(),
			should_fail: true,
			args: vala_flags + [case.underscorify() + '.vala'],
		)
	endif
endforeach

foreach case : test_cases_non_null
	if case.endswith('.vala')
		test(case,
			valac_exe,
			workdir: meson.current_build_dir(),
			args: vala_flags + ['--enable-experimental-non-null', join_paths(meson.current_source_dir(), case)],
		)
	endif
endforeach
