install_data([
		'abstractclass.svg',
		'abstractmethod.svg',
		'abstractproperty.svg',
		'class.svg',
		'coll_close.svg',
		'coll_open.svg',
		'constant.svg',
		'constructor.svg',
		'delegate.svg',
		'devhelpstyle.css',
		'enum.svg',
		'enumvalue.svg',
		'errorcode.svg',
		'errordomain.svg',
		'field.svg',
		'interface.svg',
		'meson.build',
		'method.svg',
		'namespace.svg',
		'package.svg',
		'packages.svg',
		'property.svg',
		'scripts.js',
		'signal.svg',
		'staticmethod.svg',
		'struct.svg',
		'style.css',
		'tip.svg',
		'virtualmethod.svg',
		'virtualproperty.svg',
		'warning.svg',
		'wikistyle.css',
	],
	install_dir: join_paths('share', 'valadoc', 'icons'),
)
